# Melody

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: pymumble2-migration.md
src/melody/: __init__.py  __main__.py  app.py  config.py  logging.py  models.py  protocols.py
src/melody/commands/: handler.py  messages.py  parser.py
src/melody/mumble/: channel_session.py  client.py  connection.py  coordinator.py  orchestrator.py  player_pool.py  pymumble_compat.py  pymumble_util.py
src/melody/playback/: buffer.py  engine.py  ffmpeg.py  format_sniff.py  pcm_pacer.py  queue.py  volume.py
src/melody/services/: __init__.py  search.py
src/melody/subsonic/: client.py  errors.py  interface.py  search.py  xml_utils.py
tests/: test_command_handler.py  test_command_parser.py  test_config.py  test_coordinator.py  test_format_sniff.py  test_imports.py  test_memory_lifecycle.py  test_messages.py  test_orchestrator.py  test_pcm_pacer.py  test_playback_engine.py  test_player_pool.py  test_pymumble_api.py  test_queue_manager.py  test_search_ranking.py  test_volume.py  test_xml_utils.py
