[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "melody"
version = "0.1.0"
description = "A modern Mumble music bot powered by Subsonic-compatible backends"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Erfan Nikouie" }]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.0.0",
    "pymumble>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
melody = "melody.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["melody"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/melody", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
