[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "melody"
version = "0.1.0"
description = "A modern Mumble music bot powered by Subsonic-compatible backends"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Erfan Nikouie" }]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.0.0",
    "pymumble @ git+https://github.com/oopsbagel/pymumble.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
melody = "melody.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/melody"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
